--- a/views/footer.html
+++ b/views/footer.html
@@ -17,7 +17,7 @@
 				<img src="/assets/img/dikeycozumler_logo_20121105w.png" alt="Dikey Çözümler">
 			</div>
 			<div class="col-md-4">
-				<strong>Merkez Ofis</strong>
+				<strong>Merkez Ofis</strong><br>
 				Atatürk Mah. Yakut Cad. Yeşim Sitesi<br>
 				16/2 Ataşehir/İstanbul
 			</div>
