--- a/views/montaj.html
+++ b/views/montaj.html
@@ -1,5 +1,36 @@
 <div class="container">
 	<h1>Montaj</h1>
 	<hr>
-	
+	<h3>Montaj uygulama alanları</h3>
+	<ul>
+		<li>Bina iç ve dış cepheleri: Temizlik, boya, izolasyon, montaj, tamirat ve afiş asımları</li>
+		<li>Alışveriş Merkezleri: Dekor asımları, temizlik, bakım</li>
+		<li>Köprü ve viyadükler: Hasar tespit çalışmaları, boya, montaj, tamirat.</li>
+		<li>Rüzgar Elektrik Santralleri: Kanat ucu boyama, kanatlarda hasar tespiti ve tamirat; kule gövdelerinde boya, tamirat, temizlik ve bakım; merdivenlerin ve düşüş durdurucu sistemlerin incelenmesi, hasar tespitleri ve bakımı.</li>
+		<li>Hidroelektrik Santralleri: Şantiye yamaçlarında taş temizliği, taş düşmesini engelleyici ağ montajı</li>
+		<li>Karayolları ve trenyolları: Taş düşmesini önleyici ağ montajı.</li>
+		<li>Petrol Platformları: Kaynak, temizlik, bakım, montaj ve NDT.</li>
+		<li>Tahribatsız Muayene (NDT): Tüm metal yapılarda Ultrasonic muayene ile metal ve kaynak sağlamlığının ölçülmesi.</li>
+		<li>Sahne kurulum ve Uçuş efektleri: Gösteri ve reklam amaçlı iple iniş gösterileri, Motor asımı</li>
+	</ul>
+	<h2>Boyama</h2>
+	<p>Dikey Çözümler olarak  endüstriyel dağcılık (iple erişim) yöntemiyle ulaşmakta zorluk yaşadığınız noktalara konusunda uzman  ekiplerimizle taleplerinize uygun çözümler sunuyoruz. Ayrıca size zaman ve maliyet tasarrufu sağlıyoruz.</p>
+	<h3>İple Erişimin ağırlıklı boya uygulama alanları</h3>
+	<ul>
+		<li>Bina iç ve dış cepheleri: Boya, izolasyon</li>
+		<li>Alışveriş Merkezleri: Dekor uygulamaları, boya, bakım</li>
+		<li>Köprü ve viyadükler: Boya, graffiti temizliği</li>
+		<li>Rüzgar Türbinleri: Kanat ucu boyama, kule gövdelerinde boyama işlemleri</li>
+		<li>Petrol Platformları: Depolama tankları boyama, boru hatları boyama</li>
+		<li>Fabrika ve Stadyumlar: Çelik konstrüksiyon boyamaları, Sanayi bacaları boyama işlemleri</li>
+	</ul>
+	<h2>Aydınlatma</h2>
+	<h3>Bina, aydınlatma ve elektrik tesisatları için montaj, kontrol, bakım ve onarım servisleri</h3>
+	<p>
+		Firmamız, yüksek binalar için su geçirmez dolgu/membran uygulamaları, beton onarımları, dış yüzey denetimleri, temizliği ve boya uygulamaları, aydınlatma ve genel  bakım olmak üzere geniş bir alanda iple erişim hizmeti vermektedir.</p>
+
+		<p>Bununla birlikte bina yüzeylerinde reklam panosu kurulumu, kaldırılması ve onarımı, geçici reklam uygulamaları, led yada diğer aydınlatma gereçleri için elektrik tesisatı kurulumu gibi iple erişim hizmetleri vermekteyiz.</p>
+
+		<p>Hızla büyüyen ve her geçen gün dahada ulaşılması güçleşen yüksek ve karmaşık yapıların ışıklandırma veya aydınlatma sorunları için en iyi çözüm iple erişim tekniğidir. Bunun için bizimle iletişime geçmeniz yeterli
+	</p>
 </div>
