--- a/views/danismanlik.html
+++ b/views/danismanlik.html
@@ -1,5 +1,45 @@
 <div class="container">
 	<h1>Danışmanlık</h1>
 	<hr>
+	<p>Engin tecrübe, mesleki bilgi ve becerilerimiz ile müşterilerimize pratik çözümler sunuyoruz</p>
+	<ul>
+		<li>Yüksekte çalışma</li>
+		<li>Yüksek Yapılarınızda Garanti Danışmanlığı ve Garanti İçi Hasarların Tespitleri</li>
+		<li>Life line</li>
+		<li>NDT Çözüm ortaklığı</li>
+		<li>On-shore ve Of-shore yüksekte erişim çözümleri</li>
+		<li>Acil durum planları ve tatbikat hizmetleri</li>
+		<li>Yüksekten kurtarma tatbikatları</li>
+		<li>Kapalı alan kurtarmaları tatbikatı</li>
+		<li>Yangın söndürme ve tahliye tatbikatları</li>
+		<li>Genel tahliye tatbikatları</li>
+		<li>Kimyasal kaçak tatbikatları</li>
+		<li>Sabotaj ve tahliye tatbikatları</li>
+		<li>Arama kurtarma yönetim sistemleri</li>
+	</ul>
+
+	<h3>Yüksekte Çalışma</h3>
+	<ul>
+		<li>Dış ve İç Cephede Montaj ve Denetleme Hizmetleri</li>
+		<li>Yüksekte çalışma</li>
+		<li>Life line ( Yaşam Hattı )</li>
+		<li>NDT Çözüm ortaklığı</li>
+		<li>On-shore ve Of-shore yüksekte erişim çözümleri</li>
+		<li>Acil durum planları ve tatbikat hizmetleri</li>
+		<li>Kurtarma eğitimi danışmanlığı</li>
+		<li>İş güvenliği danışmanlığı</li>
+		<li>IRATA ve SPRAT Eğitimleri</li>
+	</ul>
+
+	<h3>Arama ve Kurtarma</h3>
+	<ul>
+		<li>Yüksekten kurtarma tatbikatları</li>
+		<li>Kapalı alan kurtarmaları tatbikatı</li>
+		<li>Yangın söndürme ve tahliye tatbikatları</li>
+		<li>Genel tahliye tatbikatları</li>
+		<li>Kimyasal kaçak tatbikatları</li>
+		<li>Sabotaj ve tahliye tatbikatları</li>
+		<li>Arama kurtarma yönetim sistemleri</li>
+	</ul>
 	
 </div>
