--- a/views/endustriyel-temizlik.html
+++ b/views/endustriyel-temizlik.html
@@ -1,5 +1,33 @@
 <div class="container">
 	<h1>Endüstriyel Temizlik</h1>
 	<hr>
+	<h2>DIŞ CEPHE CAM TEMİZLİĞİ</h2>
+	<p>Yükseklik ve mevcut ulaşım sistemlerinin ( Vinç , İskele, asansör vb ) yetersiz kaldığı işlerinizde uluslararası eğitimlere sahip olan ve sertifikalı iple erişim teknisyenlerimiz ile çok daha etkin çözümler sunuyoruz.Böylece uzun zaman ve yüksek maliyet gibi sorunları ortadan kaldırmış oluyoruz.</p>
+	<ul>
+		<li>Dış cephe cam temizliği</li>
+		<li>Çelik Konstrüksiyon Temizliği</li>
+		<li>İnşaat sonrası temizlik</li>
+		<li>Basınçlı yıkama</li>
+		<li>Grafiti temizliği</li>
+		<li>Boya temizliği</li>
+		<li>Kubbe temizliği</li>
+	</ul>
+	<h2>ÇELİK KONSTRÜKSİYON TEMİZLİĞİ</h2>
+	<h2>BASINÇLI YIKAMA</h2>
+	<h2>NEDEN İPLE ERİŞİM?</h2>
+	<ul>
+		<li>Güvenli bir sistemdir.</li>
+		<li>Emniyet sistemleri çabuk kurulur ve sökülür</li>
+		<li>Bir çok noktaya kolay ulaşım imkanı sağlar. Hatta İmkansız görünen noktalara iple erişilebilme imkanı vardır.</li>
+		<li>Yüksek işlerde ve diğer ulaşılması zor noktalarda tüm başka yöntemlere göre daha verimlidir.</li>
+		<li>Yerle (zeminle) ilişki kurmadan projelerinzin gerçekleştirelebilmesine imkan sağlar.</li>
+		<li>Standartlara uygun ve emniyetlidir.Gerekli standartlar olan EN ve CE ‘ye sahip ekipman ve tecrübeli personel sayesinde tamamen güvenlidir</li>
+		<li>Halihazırda çalışan personel ve diğer ekiplerin çalışmalarına engel olmaz.</li>
+		<li>Tüm diğer seçeneklere göre daha emniyetli ve hesaplıdır.</li>
+		<li>Proje maliyetlerini yükseltecek üçüncü kişilere ihtiyaç duyulmaz. (iskele, vinç, vs.)</li>
+		<li>Çevreye zarar vermez.</li>
+		<li>Görüntü ve gürültü kirliliğine sebep olmaz.</li>
+		<li>İple çözüm hasar vermez. İş sonrası bakım ve hizmet ihtiyacı olmaz.</li>
+	</ul>
 	
 </div>
