--- a/views/montaj.html
+++ b/views/montaj.html
@@ -26,11 +26,23 @@
 	</ul>
 	<h2>Aydınlatma</h2>
 	<h3>Bina, aydınlatma ve elektrik tesisatları için montaj, kontrol, bakım ve onarım servisleri</h3>
-	<p>
-		Firmamız, yüksek binalar için su geçirmez dolgu/membran uygulamaları, beton onarımları, dış yüzey denetimleri, temizliği ve boya uygulamaları, aydınlatma ve genel  bakım olmak üzere geniş bir alanda iple erişim hizmeti vermektedir.</p>
-
-		<p>Bununla birlikte bina yüzeylerinde reklam panosu kurulumu, kaldırılması ve onarımı, geçici reklam uygulamaları, led yada diğer aydınlatma gereçleri için elektrik tesisatı kurulumu gibi iple erişim hizmetleri vermekteyiz.</p>
-
-		<p>Hızla büyüyen ve her geçen gün dahada ulaşılması güçleşen yüksek ve karmaşık yapıların ışıklandırma veya aydınlatma sorunları için en iyi çözüm iple erişim tekniğidir. Bunun için bizimle iletişime geçmeniz yeterli
+	<p>Firmamız, yüksek binalar için su geçirmez dolgu/membran uygulamaları, beton onarımları, dış yüzey denetimleri, temizliği ve boya uygulamaları, aydınlatma ve genel  bakım olmak üzere geniş bir alanda iple erişim hizmeti vermektedir.</p>
+	<p>Bununla birlikte bina yüzeylerinde reklam panosu kurulumu, kaldırılması ve onarımı, geçici reklam uygulamaları, led yada diğer aydınlatma gereçleri için elektrik tesisatı kurulumu gibi iple erişim hizmetleri vermekteyiz.</p>
+	<p>Hızla büyüyen ve her geçen gün dahada ulaşılması güçleşen yüksek ve karmaşık yapıların ışıklandırma veya aydınlatma sorunları için en iyi çözüm iple erişim tekniğidir. Bunun için bizimle iletişime geçmeniz yeterli
 	</p>
+	<h2>Yaşam Hattı ( Life Line )</h2>
+	<p>Dikey Çözümler olarak riskli çalışma alanlarında yaşam hattı kurulum, bakım ve onarım hizmetleri ile birlikte bu sistemler için danışmanlık ve ilgili personel için eğitim hizmetleri vermekteyiz.</p>
+	<p>Özellikle fabrika ve imalathaneler,endüstriyel tesisler,stad,baca ve kulelerde kullanılmakta olan uzun yılar süren tecrübe ve birikimin eseri standart bir uygulamadır. Özel ve emniyetli dizaynı sayesinde ilgili standartlarda uygun sertifikalı kalıcı düşüş durdurucu sistemlerdir. Her türlü projeye ve uygulama alanına tecrübeli İple erişim teknisyenlerimiz sayesinde projelendirme ve uygulama yapabilmekteyiz. Erişimi en güç ve sorunlu bölgelere dahi en ekonomik ve verimli çözümler üretmekteyiz.</p>
+	<h2>NDT Servisi</h2>
+	<h3>Tahribatsız Test Denetim Hizmetleri</h3>
+	<p>NDT denetim işleri her geçen gün diğer alternatif metodlara göre daha ucuz ve güvenli, aynı zamanda daha az iş gücü gerektirdiği için her geçen gün daha popüler hale gelmektedir. Dikey Çözümler olarak NDT sertifikalı çalışanlarımızla aşağıdaki metodlar ile denetim, bakım ve onarım hizmetleri sağlamaktayız.</p>
+	<ul>
+		<li>Radyografi (Röntgen): Gammer  ve  X-Ray cihazları kullanılarak boru ve kaynak bölgeleri üzerinde denetim yapılarak bozuk bölgelerin bulunmasıdır. Aynı zamanda flash radyografi ile yalıtım altındaki bölgelerin denetimi yapılabilmektedir.</li>
+		<li>Dye penetrant: Bu kısmı ceviremedim. Bir şekilde yüzeylere boya uygulayarak ve bu boyaların kanadığı!!! Yada ne biliyim bozukluk gösterdiği bölgelerin sorunlu olduğunu bulan bir yöntem sanırım.</li>
+		<li>Ultrasonik: yeraltında yapılacak ölçümler için pratik bir yöntemdir. Ultrasonun oluşturduğu yüksek frekanslı dalgalar sayesinde malzeme üzerindeki sorunlu bölgeler tespit edilebilmektedir.</li>
+		<li>Manyetik Parçacık: Ferromanyetik malzemeler üzerindeki sorunlu bölgelerin belirlenebildiği kolay uygulanabilir ve güvenilir bir yöntemdir.</li>
+		<li>Girdap akımı ( Yada elektrik akımı olabilir , yada manyetik dalga testi http://www.olympus-ims.com/en/eddycurrenttesting/ ) : elektirik dalgaları kullanılarak iletken malzemeler üzerinde bir manyetik alan oluşturularak, bozuk bölgelerin tespit edilmesi yöntemidir.</li>
+		<li>Gözlem: bozul bölgelerin bulunması için tüm yüzeyin taranması işlemidir. Bu işlem yukarıdaki methodlardan birini yada birkaçını da gerektirebilir</li>
+	</ul>
+	
 </div>
