--- a/views/ruzgar-enerjisi.html
+++ b/views/ruzgar-enerjisi.html
@@ -1,5 +1,38 @@
 <div class="container">
 	<h1>Rüzgar Enerjisi</h1>
 	<hr>
-	
+	<h2>Rüzgar Türbini Gövde ve Kanat Bakım / Servis Hizmeti</h2>
+	<p>İple erişim teknisyenlerimiz ve kullandığımız yöntemler sayesinde rüzgar türbinleri için aşağıda belirtilen gövde ve kanat bakım onarım hizmetlerini düşük maliyetlerle gerçekleştirmekteyiz.</p>
+	<ul>
+		<li>Yeni Kablo Değişimi ve Sabitlemeler, Kablo Taşıyıcı ve Busbar Tamiratı</li>
+		<li>Paratoner Sistemleri için Akım Testi ve Onarımı,Uyarı Işığı ve Flaşör Montajı</li>
+		<li>Bolt Testleri ve Cıvata Sıkmaları</li>
+		<li>Yüzey çentik temizleme ve kaplama</li>
+		<li>Hidrolik ve Dişli Kutusu Arızalarında Oluşan Yağların Temizliği</li>
+		<li>Nacelle ve Spinner Fiberglas Temizliği,Epoksi Boya Uygulamaları</li>
+		<li>Gövde İçi ve Dışı denetim, Bakım, Onarım ve Temizliği</li>
+	</ul>
+	<p>Dikey Çözümler kanat servis ekibi kanat ucu boyama ve kanat hasarlarının onarılması konusunda, kalite standartları gözetilerek, en ekonomik yöntem olan iple erişim yöntemiyle müşterilerine hizmet vermektedir.</p>
+	<ul>
+		<li>Kanat Boyama</li>
+		<li>Kanat Koruma Montajı</li>
+		<li>NDT , Tahribatsız Muayene</li>
+		<li>Kanat Denetlemeleri ve Raporlamalar, Periyodik Yıpranma ve Hasar Kontrolleri</li>
+	</ul>
+
+	<h2>Rüzgar Ölçüm Direği Montaj, Demontaj ve Bakımı</h2>
+	<p>Dikey Çözümler farklı tipte birçok rüzgar ölçüm direğinin montajını gerçekleştirmektedir. Dikey Çözümler’in rüzgar ölçüm direği montaj ekibi, farklı yükseklikte 100’dan fazla ölçüm direğinin dikimini gerçekleştirmiştir. Yıkılan ölçüm direklerinin yeniden kurulumu ve problemli ölçüm cihazlarının değişimini gerçekleştirmek için ölçüm direklerinin demontajı, Dikey Çözümler’in verdiği hizmetler arasındadır.</p>
+	<ul>
+		<li>Rüzgar Ölçüm Direği Montajı</li>
+		<li>Sıcaklık, Nem ve Basınç Sensörü Montajı</li>
+		<li>Anemometre Yan Kol Montajı</li>
+		<li>Anemometre Kalibrasyonu</li>
+		<li>Yön Sensörü Montajı</li>
+		<li>Çelik Halat kontrolleri ve değişim Uygulamaları</li>
+		<li>Yıldırım Koruma ve Topraklama Sistemi Montajı</li>
+		<li>Güneş Paneli Montajı</li>
+		<li>Veri Toplayıcı Montajı</li>
+		<li>Uyarı Işığı ve Flaşör Montajı</li>
+		<li>Montaj Sonrası Denetim, Danışmanlık, Kontrol ve Kalibrasyon</li>
+	</ul>
 </div>
