--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -109,16 +109,18 @@ footer .row{
 }
 
 .homepage{
-  background-color: #eee;
-  background-image: url(/assets/img/homepage.jpg);
-  background-size: cover;
-  height: 400px;
+  background-color: #f8f8f9;
+  background-image: url(/assets/img/home/slide1.jpg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 620px;
   margin-left:-15px;
   margin-right:-15px;
   margin-top:-20px;
 }
 .homepage-content{
-  margin-top: -100px;
+  margin-top: -150px;
 }
 .homepage-content-item{
   background-color: #333;
