--- a/views/anasayfa.html
+++ b/views/anasayfa.html
@@ -4,12 +4,12 @@
 	<div class="homepage-content">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-5 col-md-offset-1">
 					<div class="homepage-content-item">
 						<a href="">YAŞAM HATTI<br><img src="/assets/img/homepage-yasamhatti.jpg" class="img-responsive"></a>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-5">
 					<div class="homepage-content-item">
 						<a href="">EĞİTİMLER<br><img src="/assets/img/homepage-egitimler.jpg" class="img-responsive"></a>
 					</div>
