--- a/views/egitim.html
+++ b/views/egitim.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h1>Eğitim</h1>
+	<h1>Eğitim - Görsel gelecek</h1>
 	<div class="row">
 		<div class="col-md-12">
 			<hr>
@@ -25,30 +25,16 @@
 		<div class="col-md-6">
 			<h3>Yüksekte Çalışma Eğitimi</h3>
 			<ul>
-			  <li>Dış ve İç Cephede Montaj ve Denetleme Hizmetleri</li>
 			  <li>On-shore ve Of-shore yüksekte erişim çözümleri</li>
 			  <li>Acil durum planları ve tatbikat hizmetleri</li>
-			  <li>Kurtarma eğitimi danışmanlığıNDT Çözüm ortaklığı</li>
-			  <li>Life line ( Yaşam Hattı )</li>
+			  <li>Kurtarma eğitimi danışmanlığı</li>
+			  <li>Life line ( Yaşam Hattı ) kullanım eğitimi</li>
 			  <li>İş güvenliği danışmanlığı</li>
 			  <li>IRATA ve SPRAT Eğitimleri</li>
-			  <li>Yüksekte çalışma</li>
+			  <li>Temel Yüksekte çalışma eğitimi</li>
 			</ul>
 		</div>
-		<div class="col-md-6">
-			<h3>İş Güvenliği ve İş Sağlığı Eğitimi</h3>
-			<p>Dikey Çözümler olarak yüksekte çalışma olmak üzere, iş sağlığı ve güvenliği eğitimleri, çalışma alanına özel kurtarma eğitimi, iskele güvenliği gibi konularda başlangıç ve ileri seviyelerde teorik ve uygulamalı eğitim hizmetleri vermekteyiz.</p>
-			<ul>
-			  <li>Konulara Göre Yüksekte Çalışma Eğitimi</li>
-			  <li>Temel Yüksekte Çalışma Eğitimi</li>
-			  <li>İleri Seviyede Yüksekte Çalışma Eğitimi</li>
-			  <li>Rüzgar Tribünlerinde Yüksekte Çalışma ve Kurtarma Eğitimi</li>
-			  <li>İskele ve Merdivenlerde Yüksekte Çalışma Eğitimi</li>
-			  <li>Çatı İşlerinde Yüksekte Çalışma</li>
-			  <li>Telekomünikasyon ve Elektrik İletim Hattı Sektöründe Yüksekte Çalışma</li>
-			  <li>Sektöre Yönelik Yüksekte Çalışma ve Kurtarma Eğitimi</li>
-			</ul>
-		</div>
+		
 	</div>
 
 	
