--- a/views/footer.html
+++ b/views/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				2017 Dikey Çözümler<br>
+				2017 <a href="/hakkimizda">Dikey Çözümler</a><br>
 				<small>İple Erişim Hizmetleri, Endüstriel Dağcılık, Rigging Hizmetleri</small>
 			</div>
 			<div class="col-md-6 text-right">
