--- a/views/hizmetler.html
+++ b/views/hizmetler.html
@@ -3,6 +3,9 @@
 	<hr>
 	<div class="row services">
 	    <div class="col-md-2 col-sm-4 col-xs-6">
+	    	<a href="/hizmetler/yasam-hatti" class="service5">Yaşam Hattı (Life Line)</a>
+	    </div>
+	    <div class="col-md-2 col-sm-4 col-xs-6">
 	    	<a href="/hizmetler/egitim" class="service1">Eğitim</a>
 	    </div>
 	    <div class="col-md-2 col-sm-4 col-xs-6">
@@ -13,9 +16,6 @@
 	    </div>
 	    <div class="col-md-2 col-sm-4 col-xs-6">
 	    	<a href="/hizmetler/endustriyel-temizlik" class="service4">Endüstriyel Temizlik</a>
-	    </div>
-	    <div class="col-md-2 col-sm-4 col-xs-6">
-	    	<a href="/hizmetler/rigging" class="service5">Rigging</a>
 	    </div>
 	    <div class="col-md-2 col-sm-4 col-xs-6">
 	    	<a href="/hizmetler/ruzgar-enerjisi" class="service6">Rüzgar Enerjisi</a>
