--- a/views/ruzgar-enerjisi.html
+++ b/views/ruzgar-enerjisi.html
@@ -1,7 +1,8 @@
 <div class="container">
 	<h1>Rüzgar Enerjisi</h1>
+	http://eyecatchersafety.com/?business_segment=wind-energy&lang=en
 	<hr>
-	<h2>Rüzgar Türbini Gövde ve Kanat Bakım / Servis Hizmeti</h2>
+	<h2>Rüzgar Türbini Gövde ve Kanat Bakım / Servis Hizmeti - Görsel gelecek</h2>
 	<p>İple erişim teknisyenlerimiz ve kullandığımız yöntemler sayesinde rüzgar türbinleri için aşağıda belirtilen gövde ve kanat bakım onarım hizmetlerini düşük maliyetlerle gerçekleştirmekteyiz.</p>
 	<ul>
 		<li>Yeni Kablo Değişimi ve Sabitlemeler, Kablo Taşıyıcı ve Busbar Tamiratı</li>
@@ -20,7 +21,7 @@
 		<li>Kanat Denetlemeleri ve Raporlamalar, Periyodik Yıpranma ve Hasar Kontrolleri</li>
 	</ul>
 
-	<h2>Rüzgar Ölçüm Direği Montaj, Demontaj ve Bakımı</h2>
+	<h2>Rüzgar Ölçüm Direği Montaj, Demontaj ve Bakımı - Görsel ( Port to Succes - 39)</h2>
 	<p>Dikey Çözümler farklı tipte birçok rüzgar ölçüm direğinin montajını gerçekleştirmektedir. Dikey Çözümler’in rüzgar ölçüm direği montaj ekibi, farklı yükseklikte 100’dan fazla ölçüm direğinin dikimini gerçekleştirmiştir. Yıkılan ölçüm direklerinin yeniden kurulumu ve problemli ölçüm cihazlarının değişimini gerçekleştirmek için ölçüm direklerinin demontajı, Dikey Çözümler’in verdiği hizmetler arasındadır.</p>
 	<ul>
 		<li>Rüzgar Ölçüm Direği Montajı</li>
