--- a/views/montaj.html
+++ b/views/montaj.html
@@ -13,7 +13,7 @@
 		<li>Tahribatsız Muayene (NDT): Tüm metal yapılarda Ultrasonic muayene ile metal ve kaynak sağlamlığının ölçülmesi.</li>
 		<li>Sahne kurulum ve Uçuş efektleri: Gösteri ve reklam amaçlı iple iniş gösterileri, Motor asımı</li>
 	</ul>
-	<h2>Boyama</h2>
+	<h2>Boyama ve Silikon</h2>
 	<p>Dikey Çözümler olarak  endüstriyel dağcılık (iple erişim) yöntemiyle ulaşmakta zorluk yaşadığınız noktalara konusunda uzman  ekiplerimizle taleplerinize uygun çözümler sunuyoruz. Ayrıca size zaman ve maliyet tasarrufu sağlıyoruz.</p>
 	<h3>İple Erişimin ağırlıklı boya uygulama alanları</h3>
 	<ul>
@@ -30,9 +30,6 @@
 	<p>Bununla birlikte bina yüzeylerinde reklam panosu kurulumu, kaldırılması ve onarımı, geçici reklam uygulamaları, led yada diğer aydınlatma gereçleri için elektrik tesisatı kurulumu gibi iple erişim hizmetleri vermekteyiz.</p>
 	<p>Hızla büyüyen ve her geçen gün dahada ulaşılması güçleşen yüksek ve karmaşık yapıların ışıklandırma veya aydınlatma sorunları için en iyi çözüm iple erişim tekniğidir. Bunun için bizimle iletişime geçmeniz yeterli
 	</p>
-	<h2>Yaşam Hattı ( Life Line )</h2>
-	<p>Dikey Çözümler olarak riskli çalışma alanlarında yaşam hattı kurulum, bakım ve onarım hizmetleri ile birlikte bu sistemler için danışmanlık ve ilgili personel için eğitim hizmetleri vermekteyiz.</p>
-	<p>Özellikle fabrika ve imalathaneler,endüstriyel tesisler,stad,baca ve kulelerde kullanılmakta olan uzun yılar süren tecrübe ve birikimin eseri standart bir uygulamadır. Özel ve emniyetli dizaynı sayesinde ilgili standartlarda uygun sertifikalı kalıcı düşüş durdurucu sistemlerdir. Her türlü projeye ve uygulama alanına tecrübeli İple erişim teknisyenlerimiz sayesinde projelendirme ve uygulama yapabilmekteyiz. Erişimi en güç ve sorunlu bölgelere dahi en ekonomik ve verimli çözümler üretmekteyiz.</p>
 	<h2>NDT Servisi</h2>
 	<h3>Tahribatsız Test Denetim Hizmetleri</h3>
 	<p>NDT denetim işleri her geçen gün diğer alternatif metodlara göre daha ucuz ve güvenli, aynı zamanda daha az iş gücü gerektirdiği için her geçen gün daha popüler hale gelmektedir. Dikey Çözümler olarak NDT sertifikalı çalışanlarımızla aşağıdaki metodlar ile denetim, bakım ve onarım hizmetleri sağlamaktayız.</p>
@@ -43,6 +40,28 @@
 		<li>Manyetik Parçacık: Ferromanyetik malzemeler üzerindeki sorunlu bölgelerin belirlenebildiği kolay uygulanabilir ve güvenilir bir yöntemdir.</li>
 		<li>Girdap akımı ( Yada elektrik akımı olabilir , yada manyetik dalga testi http://www.olympus-ims.com/en/eddycurrenttesting/ ) : elektirik dalgaları kullanılarak iletken malzemeler üzerinde bir manyetik alan oluşturularak, bozuk bölgelerin tespit edilmesi yöntemidir.</li>
 		<li>Gözlem: bozul bölgelerin bulunması için tüm yüzeyin taranması işlemidir. Bu işlem yukarıdaki methodlardan birini yada birkaçını da gerektirebilir</li>
+	</ul>
+
+	<h2>Rigging & Sahne Kurulum Hizmetleri</h2>
+	<hr>
+	<h3>Sahne Kurulum Hizmetleri</h3>
+	<p>Dikey Çözümler rigger ekipleri Ses, Işık, Görüntü ve Dekor  sistemlerinin güvenli bir şekilde ve  zamanında  montajı için en iyi çözüm ortağınız. Sayısız konser ve gösteride ihtiyaç duyulan alanda sorunsuz ve hızlı bir şekilde hizmet sunmuştur.</p>
+	<ul>
+		<li>Motor asım ve söküm hizmetleri</li>
+		<li>Ses, Işık ve Görüntü sistemlerinin montajı</li>
+		<li>Dekor uygulamaları</li>
+		<li>Film, Reklam ve sahne şovlarında  uçuş efektleri</li>
+	</ul>
+	<h3>Uçuş Efektleri</h3>
+	<p>--Yazı gelecek--</p>
+
+	<h3>Rigging Hizmeti ( Yük Kaldırma )</h3>
+	<p>Stadyum,kapalı spor salonları, Avm’ler, Fabrikalar, Tersaneler, Gökdelen, Tarihi yapılar,vb alanlarda vinç, forklift,asansör gibi yük kaldırma hizmetlerinin erişim’de  ve ulaşımda sıkıntı yaşandığı noktalara Dikey Çözümler olarak motorlu kaldırma sistemleriyle  yük kaldırma montaj ve değişim hizmeti sunuyoruz.</p>
+	<ul>
+		<li>Stadyum ve spor salonları: skorbord montajı ve değişimi</li>
+		<li>Avm ve Gökdelen ( bina) cepheleri: led ekran montajı, Avize montajı</li>
+		<li>Fabrika ve Tersaneler: Ağır objelerin yer değişimi veya taşınması</li>
+		<li>Gökdelenler ve Oteller: Asansör ile taşınamayan ağır ve büyük objelerin hol boşluğundan üst katlara çekilmesi</li>
 	</ul>
 	
 </div>
