--- a/views/hizmetler.html
+++ b/views/hizmetler.html
@@ -3,7 +3,7 @@
 	<hr>
 	<div class="row services">
 	    <div class="col-md-2 col-sm-4 col-xs-6">
-	    	<a href="/hizmetler/yasam-hatti" class="service5">Yaşam Hattı (Life Line)</a>
+	    	<a href="/hizmetler/yasam-hatti" class="service5">Yaşam Hattı<br>(Life Line)</a>
 	    </div>
 	    <div class="col-md-2 col-sm-4 col-xs-6">
 	    	<a href="/hizmetler/egitim" class="service1">Eğitim</a>
